# web-midi-editor

./: Cargo.toml  LICENSE  README.md  index.html
src/: action.rs  main.rs  midi.rs  playback.rs  project.rs  util.rs  views.rs
static/: styles.css
