[package]
name = "web-midi-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["Blob", "CssStyleDeclaration", "Document", "DomRect", "Element", "HtmlAnchorElement", "HtmlElement", "HtmlSelectElement", "Navigator", "MidiAccess", "MidiOptions", "MidiOutput", "MidiOutputMap", "SvgAnimatedLength", "SvgLength", "SvgLineElement", "Url"] }
js-sys = "0.3.55"
gloo-timers = "0.2.2"
